# nesbox

./: .all-contributorsrc  .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .graphqlrc.yml  .prettierrc.js  .prettierrc.json  .taurignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PUBLISH_GAME.md  README.md  package.json  vercel.json
.github/ISSUE_TEMPLATE/: add_game.md  add_nes.md  bug_report.md
.github/workflows/: lint.yml  release.yml
games/gomoku/: Cargo.toml  README.md
games/gomoku/assets/: about.txt  arialBlack.data  piece.data  select-an-item.mp3.data
games/gomoku/src/: algo.rs  game.rs  lib.rs
games/tetris/: README.md  env.d.ts  package.json  tsconfig.json
games/tetris/assets/: arialBlack.data  courierNew.data  game_over.data
games/tetris/src/: _assets.ts  components.ts  constants.ts  entities.ts  index.ts  scenes.ts  systems.ts
scripts/: nes-pkg.mjs
