[package]
name = "gomoku"
version = "0.1.0"
authors = ["mantou132 <709922234@qq.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nesbox_utils = { path = "../../packages/nes/utils" }
strum = "0.24"
strum_macros = "0.24"

# fixed ecs macro
bevy = { version = "0.10", default-features = false }
